.gradle/gradle.log
****************************
 Powered By MCP:             
 http://mcp.ocean-labs.de/   
 Searge, ProfMobius, Fesh0r, 
 R4wk, ZeuX, IngisKahn, bspkrs
 MCP Data version : unknown
****************************
:compileApiJava UP-TO-DATE
:processApiResources UP-TO-DATE
:apiClasses UP-TO-DATE
:sourceMainJava
:compileJavawarning: [options] bootstrap class path not set in conjunction with -source 1.6
M:\ME-Corp\MineralEssentials\build\sources\java\io\github\mecorp\mineralessentials\machines\furnaces\TileEntityMultiSmelterBlock.java:27: error: cannot find symbol
                player.openGui(MineralEssentials.instance, GUIs.MultiSmelter.ordinal(), world, x, y, z);
                                                ^
  symbol:   variable instance
  location: class MineralEssentials
M:\ME-Corp\MineralEssentials\build\sources\java\io\github\mecorp\mineralessentials\machines\furnaces\TileEntityMultiSmelterBlock.java:23: error: method does not override or implement a method from a supertype
    @Override
    ^
Note: M:\ME-Corp\MineralEssentials\build\sources\java\io\github\mecorp\mineralessentials\proxy\ClientProxy.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
2 errors
1 warning
 FAILED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 1 mins 23.812 secs
